<resources>
    <string name="app_name">TODO</string>
    <string name="add">추가</string>
</resources>